[Nav Experiment] Handle about:newtab when traversing restored history.

Navigating away from an app-specific URL in restored session history is
a special case that requires a reload to trigger theclient-side redirect
in restore_session.html. about:newtab, which is used by the
BrowserContainerContainsNTP feature, should be treated as an app-specific
URL for this case.

This fixes the regression in
NavigationTestCase/testRestoreHistoryToNTPAndNavigateForward
after enabling BrowserContainerContainsNTP.

Bug: 905688
Change-Id: I96d4612152a003f3c7275720a01eb6376c3ff806
Reviewed-on: https://chromium-review.googlesource.com/c/1340761
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608982}
Former-commit-id: 6bd66a17cc064a97ccda63b35921c3fa55731ab4